# emulation_file_manager

./: '  .gitignore  .tbls.yml  4  7  AGENTS.md  CLAUDE.md  CREDENTIALS_SECURITY_IMPROVEMENTS.md  Cargo.toml  GEMINI.md  KEYRING_BACKEND_ISSUE.md  MIXED_RUNTIME_ISSUE.md  README.md  SETTINGS_SERVICE_USAGE.md  TODO.md  ZSTD_COMPRESSION_BUG.md  copilot-instructions.md  diff.txt  emulator-notes.md  temp.rs  zesarux_index_menu.idx
cli/: Cargo.toml  README.md
cli/output/: 1_Cargo.zst  2_Cargo.zst
cli/output/export/: 1_Cargo.toml-46d6ec06a0232604742a7dbf9f7c44550a56b646-exported  2_Cargo.lock-dc72f86eba9684823780d55a4a156bfca5e9532f-exported
cli/src/: main.rs
cli/test_files/: test.d64
cloud_storage/: CLOUD_STORAGE_OPS.md  Cargo.toml
cloud_storage/src/: events.rs  lib.rs  mock.rs  ops.rs
credentials_storage/: Cargo.toml  KEYRING_BACKEND_ISSUE.md
credentials_storage/examples/: test_keyring.rs
credentials_storage/src/: lib.rs
dat_file_parser/: Cargo.toml  README.md
dat_file_parser/example-data/: schema.xml
dat_file_parser/src/: lib.rs
database/: .env  Cargo.toml  README.md  collection.db  update-after-migration.sh
database/data/: db.sqlite
database/docs/schema/: README.md  _sqlx_migrations.md  dat_file.md  dat_game.md  dat_rom.md  document_viewer.md  emulator.md  file_info.md  file_info_system.md  file_set.md  file_set_dat_file_link.md  file_set_file_info.md  file_set_item.md  file_set_item_type.md  file_sync_log.md  franchise.md  release.md  release_file_set.md  release_item.md  release_item_file_set.md  release_software_title.md  schema.json  setting.md  software_title.md  system.md  system_libretro_core.md
database/migrations/: 20250408184623_add_collection_file_and_file_info.sql  20250901205957_add_cascade_delete_to_release_tables.sql  20250902205445_add_source_field_to_file_set.sql  20250921130518_add_file_type_to_file_info.sql  20251007194618_add_file_sync_log.sql  20251007200556_add_morefile_sync_log_fields.sql  20251007202101_drop_file_sync_log_table.sql  20251007202202_add_file_sync_log_table.sql  20251018200839_file_info_system_on_delete_cascade.sql  20251130225248_add_cleanup_temp_files_to_document_viewers.sql  20251209210745_remove_file_sync_log_foreign_key.sql  20260105182735_release_item_table.sql  20260105215220_add_order_to_file_set.sql  20260111203447_change_file_set_item_to_item_type.sql  20260111212426_replace_file_set_item_with_release_item_file_set.sql  20260115184248_add_file_set_item_table.sql  20260118160228_add_dat_import_tables.sql  20260118204701_add_system_id_to_dat_file.sql  20260206214118_add_file_set_dat_file_link_table.sql  20260214185000_file_set_file_info_on_delete_cascade.sql  20260303181918_release_thumbnail_filename.sql  20260307191012_add_system_libretro_core_table.sql  20260309161616_fix_system_libretro_core_id_not_null.sql  20260328165429_add_is_available_to_file_info.sql  20260405065807_make_archive_file_name_nullable.sql  20260405173422_change_is_available_default_to_zero.sql  20260406080000_add_cloud_sync_status_to_file_info.sql  20260407104000_remove_is_available_from_file_info.sql
database/src/: database_error.rs  database_path.rs  helper.rs  lib.rs  models.rs  repository_manager.rs
database/src/repository/: collection_file_repository.rs  dat_repository.rs  document_viewer_repository.rs  emulator_repository.rs  file_info_repository.rs  file_set_repository.rs  file_sync_log_repository.rs  franchise_repository.rs  mod.rs  release_item_repository.rs  release_repository.rs  setting_repository.rs  software_title_repository.rs  system_libretro_core_repository.rs  system_repository.rs
http_downloader/: Cargo.toml  README.md
http_downloader/src/: lib.rs
relm4-ui/: APPLICATION_SHUTDOWN_DESIGN.md  Cargo.toml  README.md  SYNC_CANCELLATION_NOTES.md
relm4-ui/src/: app.rs  argument_list.rs  document_file_set_viewer.rs  document_viewer_form.rs  emulator_form.rs  emulator_runner.rs  file_importer.rs  file_info_details.rs  file_selector.rs  file_set_details_view.rs  file_set_editor.rs  file_set_form.rs  file_set_selector.rs  file_types_dropdown.rs  image_fileset_viewer.rs  image_viewer.rs  import_form.rs  list_item.rs  logging.rs  main.rs  release.rs  release_form.rs  releases.rs  settings_form.rs  software_title_form.rs  software_title_list.rs  software_title_merge_dialog.rs  software_title_selector.rs  software_titles_list.rs  status_bar.rs  style.css  style.rs  system_form.rs  system_selector.rs  tabbed_image_viewer.rs  utils.rs
relm4-ui/src/components/: item_type_dropdown.rs  mod.rs
relm4-ui/src/import/: import_form.rs  import_results.rs  mod.rs
relm4-ui/src/libretro/: core_picker.rs  input.rs  mod.rs  runner.rs  window.rs
relm4-ui/src/release_form_components/: file_set_list.rs  item_form.rs  item_list.rs  mod.rs  software_title_list.rs  system_list.rs
relm4-ui/src/settings_components/: libretro_cores_dialog.rs  mod.rs
relm4-ui/src/utils/: dialog_utils.rs  mod.rs  string_utils.rs  typed_list_view_utils.rs
service/: CLOUD_SYNC_SUCCESS_STATES.md  Cargo.toml  HYBRID_PIPELINE_PATTERN.md  REFACTORING_SUMMARY.md  TRAIT_OBJECTS_EXPLAINED.md
service/docs/: HYBRID_PIPELINE_PATTERN.md
service/src/: app_services.rs  cloud_connection.rs  cloud_storage_sync_service.rs  dat_file_service.rs  dat_game_status_service.rs  document_viewer_service.rs  download_service.rs  emulator_service.rs  error.rs  export_service.rs  file_service.rs  file_set_deletion_service.rs  file_set_service.rs  file_system_ops.rs  lib.rs  pipeline.rs  release_deletion_service.rs  release_item_service.rs  release_service.rs  settings_service.rs  software_title_service.rs  system_service.rs  view_model_service.rs  view_models.rs
service/src/cloud_sync/: context.rs  pipeline.rs  service.rs  steps.rs
service/src/external_executable_runner/: context.rs  pipeline.rs  service.rs  steps.rs
ui/: Cargo.toml
ui-components/: Cargo.toml
ui-components/examples/: dropdown_test.rs
ui-components/src/: confirm_dialog.rs  drop_down.rs  lib.rs  message_list_view.rs  string_list_view.rs
ui/src/: defaults.rs  error.rs  main.rs
ui/src/app/: effect.rs  (+2 more)
(+508 files in other folders)
