[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
file_import = { path = "../file_import" }
file_export = { path = "../file_export" }
database = { path = "../database" }
emulator_runner = { path = "../emulator_runner" }
async-std = "1.13.1"
