[package]
name = "cloud_storage"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
async-std = { version = "1.13.2", features = ["attributes"] }
async-trait = "0.1.89"
rust-s3 = { version = "0.37.0", default-features = false, features = [
    "with-async-std",
    "async-std-rustls-tls"
] }
thiserror = "2.0.17"
uuid = { version="1.17.0", features = ["v4"] }
core_types = { path = "../core_types" }
