[package]
name = "dat_file_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.89"
async-std = { version = "1.13.2", features = ["attributes"] }
domain = { path = "../domain" }
