[package]
name = "database"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
async-std = { version = "1.13.1", features = ["attributes"] }
directories-next = "2.0.0"
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = ["runtime-async-std", "sqlite", "migrate", "chrono"] }
thiserror = "2.0.12"
file_system = { path = "../file_system" }
core_types = { path = "../core_types" }
serde_json = "1.0.142"
chrono = "0.4.42"

