[package]
name = "http_downloader"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
surf = { version = "2.3", default-features = true }
async-std = { version = "1.13.2", features = ["attributes"] }
thiserror = "1.0"
futures = "0.3"
core_types = { path = "../core_types" }
