[package]
name = "efm-relm4-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
relm4 = "0.9.1"
relm4-components = "0.9.1"
database = { path = "../database" }
service = { path = "../service" }
file_export = { path = "../file_export" }
file_import = { path = "../file_import" }
core_types = { path = "../core_types" }
emulator_runner = { path = "../emulator_runner" }
thumbnails = { path = "../thumbnails" }
utils = { path = "../utils" }
ui-components = { path = "../ui-components" }
strum = "0.27"
strum_macros = "0.27"
tracker = "0.2.2"
async-std = { version = "1.13.2", features = ["attributes"] }
cloud_storage = { path = "../cloud_storage" }


