[package]
name = "efm-relm4-ui"
version = "0.1.0"
edition = "2024"
description = "Emulation File Manager - A GTK4 application for managing emulation software collections and emulator front end" 
license = "GPL-3.0-or-later"
authors = ["Mikko Keinänen"]

[dependencies]
relm4 = "0.9.1"
relm4-components = "0.9.1"
database = { path = "../database" }
service = { path = "../service" }
file_export = { path = "../file_export" }
file_import = { path = "../file_import" }
file_system = { path = "../file_system" }
core_types = { path = "../core_types" }
thumbnails = { path = "../thumbnails" }
utils = { path = "../utils" }
ui-components = { path = "../ui-components" }
strum = "0.27"
strum_macros = "0.27"
tracker = "0.2.2"
async-std = { version = "1.13.2", features = ["attributes"] }
cloud_storage = { path = "../cloud_storage" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"


[package.metadata.deb]
maintainer = "Mikko Keinänen"
copyright = "2024-2025, Mikko Keinänen"
license-file = ["../LICENSE", "0"]
extended-description = """\
A GTK4 application for managing emulation software collections and emulator front end. \
Features include file management, emulator integration, and cloud sync."""
depends = "$auto, libgtk-4-1, libdbus-1-3"
section = "utils"
priority = "optional"
assets = [
    ["target/release/efm-relm4-ui", "usr/bin/", "755"],
]
