[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
file_system = { path = "../file_system" }
file_export = { path = "../file_export" }
async-std = { version = "1.13.1", features = ["attributes"] }
core_types = { path = "../core_types" }
serde_json = "1.0.142"
