[package]
name = "service"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
database = { path = "../database" }
file_system = { path = "../file_system" }
file_export = { path = "../file_export" }
credentials_storage = { path = "../credentials_storage" }
async-std = { version = "1.13.2", features = ["attributes"] }
async-trait = "0.1.89"
core_types = { path = "../core_types" }
cloud_storage = { path = "../cloud_storage" }
serde_json = "1.0.142"
tracing = "0.1"
