[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["image"] }
database = { path = "../database" }
service = { path = "../service" }
file_import = { path = "../file_import" }
rfd = "0.15.3"
tokio = { version = "1.44.2", features = ["full"] }

