[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["image"] }
database = { path = "../database" }
service = { path = "../service" }
file_export = { path = "../file_export" }
file_import = { path = "../file_import" }
core_types = { path = "../core_types" }
emulator_runner = { path = "../emulator_runner" }
utils = { path = "../utils" }
rfd = "0.15.3"

